[gd_scene load_steps=18 format=3 uid="uid://5y3fveo3irep"]

[ext_resource type="Script" path="res://Scripts/Level1.gd" id="1_ix3mw"]
[ext_resource type="PackedScene" uid="uid://xoy5duig3lhf" path="res://Models/camp4.blend" id="2_4r12g"]
[ext_resource type="PackedScene" uid="uid://b8a8ibpkhrdkr" path="res://Scenes/player.tscn" id="3_l26ss"]
[ext_resource type="PackedScene" uid="uid://15d4kbd7usml" path="res://Scenes/flashlight.tscn" id="4_0rj7x"]
[ext_resource type="Script" path="res://Generator.gd" id="5_i2btg"]
[ext_resource type="PackedScene" uid="uid://d1moonqamm0nn" path="res://Scenes/bar.tscn" id="6_uq53l"]
[ext_resource type="Script" path="res://Scripts/KillArea.gd" id="7_jilbd"]
[ext_resource type="PackedScene" uid="uid://buw6jrpn14jvj" path="res://Scenes/key.tscn" id="8_wbp1a"]

[sub_resource type="Environment" id="Environment_sc5bk"]
ambient_light_source = 3
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_energy = 0.02

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_hawex"]

[sub_resource type="BoxShape3D" id="BoxShape3D_03epu"]
size = Vector3(0.11664, 6.4058, 19.2027)

[sub_resource type="BoxShape3D" id="BoxShape3D_bgyfq"]
size = Vector3(4.49426, 4.4089, 7.52713)

[sub_resource type="BoxShape3D" id="BoxShape3D_68skb"]
size = Vector3(0.870049, 1.71753, 0.856484)

[sub_resource type="BoxShape3D" id="BoxShape3D_mfd8t"]
size = Vector3(1.43664, 3.54708, 1.43123)

[sub_resource type="BoxShape3D" id="BoxShape3D_y26di"]
size = Vector3(2, 5.51384, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_akir8"]
size = Vector3(2, 5.53838, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_8yuoc"]
height = 5.12001
radius = 2.38911

[node name="Level" type="Node3D"]
script = ExtResource("1_ix3mw")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_sc5bk")

[node name="WorldGeo" type="StaticBody3D" parent="."]

[node name="Floor" type="CollisionShape3D" parent="WorldGeo"]
shape = SubResource("WorldBoundaryShape3D_hawex")

[node name="camp4" parent="WorldGeo" instance=ExtResource("2_4r12g")]
transform = Transform3D(-0.5, 0, -4.37114e-08, 0, 0.5, 0, 4.37114e-08, 0, -0.5, 0, 0, 0)

[node name="Wall" type="CollisionShape3D" parent="WorldGeo"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.12041, 0, -1.07889)
shape = SubResource("BoxShape3D_03epu")

[node name="Wall2" type="CollisionShape3D" parent="WorldGeo"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.61643, 0, -0.418295)
shape = SubResource("BoxShape3D_03epu")

[node name="Wall3" type="CollisionShape3D" parent="WorldGeo"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.958936, 0, -8.99074)
shape = SubResource("BoxShape3D_03epu")

[node name="Wall4" type="CollisionShape3D" parent="WorldGeo"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.554349, 0, 8.98192)
shape = SubResource("BoxShape3D_03epu")

[node name="TrailerWall" type="CollisionShape3D" parent="WorldGeo"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.94318, 1.14208, 1.35274)
shape = SubResource("BoxShape3D_bgyfq")

[node name="Stool" type="CollisionShape3D" parent="WorldGeo"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.73626)
shape = SubResource("BoxShape3D_68skb")

[node name="Stool2" type="CollisionShape3D" parent="WorldGeo"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.13595, 0, 3.84662)
shape = SubResource("BoxShape3D_68skb")

[node name="Player" parent="." instance=ExtResource("3_l26ss")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -5.42566, 0.346909, 5.98789)

[node name="Flashlight" parent="." instance=ExtResource("4_0rj7x")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 3.05573, 0.919257, 3.83797)

[node name="Pivot" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="Pivot"]
transform = Transform3D(1, 0, 0, 0, 0.548279, 0.836296, 0, -0.836296, 0.548279, 0, 12.13, 12.541)

[node name="Generator" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.06217, 0, 5.87847)
script = ExtResource("5_i2btg")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Generator"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00656796, 0, 0.00985098)
shape = SubResource("BoxShape3D_mfd8t")

[node name="Bar" parent="." instance=ExtResource("6_uq53l")]
transform = Transform3D(-0.00818546, 0.999967, 0, -0.999967, -0.00818546, 0, 0, 0, 1, -1.12777, 0.344692, 6.74093)

[node name="TrailerLights" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.56072, 0, 1.04391)
script = ExtResource("7_jilbd")

[node name="CollisionShape3D" type="CollisionShape3D" parent="TrailerLights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.867949, 0, 2.84857)
shape = SubResource("BoxShape3D_y26di")

[node name="SpotLight3D" type="SpotLight3D" parent="TrailerLights/CollisionShape3D"]
transform = Transform3D(-1.45228e-08, -0.943194, 0.332243, -4.12283e-08, 0.332243, 0.943194, -1, 0, -4.37114e-08, 1.00906, 2.12322, 0)
spot_range = 3.29839
spot_attenuation = 0.0
spot_angle = 25.8848

[node name="CollisionShape3D2" type="CollisionShape3D" parent="TrailerLights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.844746, 0, -2.26074)
shape = SubResource("BoxShape3D_akir8")

[node name="SpotLight3D" type="SpotLight3D" parent="TrailerLights/CollisionShape3D2"]
transform = Transform3D(-4.37114e-08, -0.943223, 0.332161, 0, 0.332161, 0.943223, -1, 4.12296e-08, -1.45192e-08, 1.009, 2.123, 0)
spot_range = 3.298
spot_attenuation = 0.0
spot_angle = 25.88

[node name="Area3D" type="Area3D" parent="."]
script = ExtResource("7_jilbd")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("CylinderShape3D_8yuoc")

[node name="OmniLight3D" type="OmniLight3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.500504, 0)
omni_range = 2.58931
omni_attenuation = 0.0

[node name="Key" parent="." instance=ExtResource("8_wbp1a")]
transform = Transform3D(0.415582, 0.909555, 0, 0.0128105, -0.00585323, 0.999901, 0.909465, -0.415541, -0.0140844, -8.9756, -0.0925309, 4.19763)

[connection signal="generator_broken" from="Generator" to="." method="_on_generator_generator_broken"]
[connection signal="body_entered" from="TrailerLights" to="TrailerLights" method="_on_body_entered"]
[connection signal="body_entered" from="Area3D" to="Area3D" method="_on_body_entered"]
